Renamed default.json to default.config.json. All non-default config files must now follow this naming pattern of *.config.json, but will be ignored by Git. Also added a default id.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
-/logdir/*
-pip-selfcheck.json
-__pycache__
-*.wav
+# System
 **/.DS_Store
+**/Thumbs.db
+
+# Python
+__pycache__
+pip-selfcheck.json
+
+# Project
+/logdir/*
+!/logdir/default/**/.gitkeep
+*.config.json
+!default.config.json
+*.wav
