--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ pip-selfcheck.json
 
 # Project
 /logdir/*
-!/logdir/default/**/.gitkeep
+!/logdir/**/.gitkeep
 *.config.json
 !default.config.json
 *.wav
