Now storing checkpoints for each 'run' in separate, time-stamped folders. We only save checkpoints at the end of an epoch, or some multiple of epochs, which means there is no need for separate 'train' and 'predict' directories. Also added LearningRateScheduler callback.

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ pip-selfcheck.json
 
 # Project
 /logdir/*
-!/logdir/**/.gitkeep
+!/logdir/default/.gitkeep
 *.config.json
 !default.config.json
 *.wav
